--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "kelp",
+  "name": "kelp_front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.6",
-    "@fortawesome/free-solid-svg-icons": "^5.4.1",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^4.1.3",
-    "i": "^0.3.6",
-    "jquery": "^3.3.1",
-    "npm": "^6.4.1",
-    "popper.js": "^1.14.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "bootstrap": "^4.2.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
